--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 header{
-    min-height: 65px;
+    min-height: 45px;
     width: 100%;
     background: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
 }
@@ -7,31 +7,113 @@ header{
 body{
     background-color: rgb(27, 27, 27);
 }
+
 *{
     padding: 0;
     margin: 0;
 }
 
 #inicioSesion{
-    float: left;
-    border-radius: 20px;
-    border: 2px solid black;
-    padding: 15px;
+    border-image: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
+    padding: 8px;
     display: flex;
     flex-direction: column;
     color:white;
     align-items: center;
 }
+
 main{
+    /* background-color: rgb(27, 27, 27); */
+    /* background-color: black; */
     display:flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    /* outline: 1px solid yellow; */
+    height: 680px;
 }
 
 #informacionAdicional{
     outline: 1px solid white;
+    border-radius: 20px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    color:white;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    width: auto;
 }
 
+.bloques{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    /* outline:2px solid white; */
+    margin-top:15px;
+    /* margin-top: 20px;
+    margin-bottom: 20px; */
+}
 
+#bloque1{
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#bloque2{
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#bloque3 h2{
+    margin:10px;
+}
+
+#bloque3{
+    /* outline: 2px solid blue; */
+    flex-direction: row;
+    width: 100%;
+    margin-top:15px;
+    text-align: center;
+}
+
+#generos{
+    /* outline: 1px solid green; */
+    justify-content: center;
+
+}
+
+#input_parameters {
+    
+    border: 5px solid transparent;
+    
+    border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
+    
+    -webkit-border-image: -webkit-linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
+    
+    border-image-slice: 1;
+    border-radius: 20px;
+    }
+
+#bloque4{
+    justify-content: center;
+    flex-direction: row;
+}
+
+#contenedorPais{
+    width:35%;
+    /* outline:1px solid orange; */
+}
+
+#contenedorCiudad{
+    width:35%;
+    /* outline:1px solid orange; */
+}
+
+#butonIngresar{
+    background: linear-gradient(#ff9900 , rgb(247, 3, 97));
+    
+}
 
 
