--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ main{
     /* outline:1px solid orange; */
 }
 
-#butonIngresar{
+#butonIngresarCorreo{
     background: linear-gradient(#ff9900 , rgb(247, 3, 97));
     
 }
