--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,11 @@ main{
     /* background-color: black; */
     display:flex;
     flex-direction: column;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     align-items: center;
     /* outline: 1px solid yellow; */
-    height: 680px;
+    height: auto;
+    width:auto;
 }
 
 #informacionAdicional{
@@ -122,6 +123,7 @@ main{
 #btn-CerrarSesion{
     float: right;
     outline:1px solid blue;
+    margin:0;
 }
 
 header h2{
@@ -161,7 +163,7 @@ header h2{
 }
 
 #contenedorLogin{
-    outline: 1px solid violet;
+    outline: 1px solid turquoise;
 }
 
 #proveedoresAdicionales{
@@ -195,10 +197,15 @@ header h2{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    outline: 1px solid green;
+    outline: 1px solid violet;
     width: auto;
+    height: auto;
+    margin:50px auto;
 }
 
+header h2{
+    font-family:monospace;
+}
 
 @media only screen and (max-width: 600px){
     header{
