--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ header{
     width: 100%;
     background: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
     display: flex;
-    outline: 2px solid green;
+    /* outline: 2px solid green; */
 }
 
 body{
@@ -100,6 +100,9 @@ main{
     border-image-slice: 1;
     border-radius: 20px;
     margin:10px;
+    margin-top:60px;
+    float:right;
+    width:60%;
     }
 
 #bloque4{
@@ -124,12 +127,13 @@ main{
 
 #btn-CerrarSesion{
     float: right;
-    outline:1px solid blue;
+    outline:2px solid rgb(255, 174, 0);
     margin:0;
 }
 
 header h2{
     width:89%;
+    font-family: monospace;
 }
 
 #btnSendPost{
@@ -137,12 +141,14 @@ header h2{
 }
 
 #personajes{
-    border: 1px solid red;
+    border: 1px solid violet;
     border-radius:380px;
-    width: 90%;
-    height: 60%;
+    width: 100%;
+    height: 120%;
     margin:auto;
-    margin-top:20px;
+    margin-top:30px;
+    margin-bottom:20px;
+    /* padding-left:-300px; */
     /* box-shadow: 100px 1000px white;  */
 }
 
@@ -171,7 +177,19 @@ header h2{
 }
 
 #contenedorLogin{
-    outline: 1px solid turquoise;
+    /* outline: 1px solid turquoise; */
+    width:29%;
+    height: 580px;
+    margin:auto;
+    justify-content: center;
+}
+
+#login{
+    margin-left:40px;
+}
+
+#butonRegistrate{
+    background:  linear-gradient( rgb(247, 3, 97), #ff9900);
 }
 
 #proveedoresAdicionales{
@@ -240,17 +258,26 @@ header h2{
     border-radius:20px;
 }
 
+#contenedorVolverLogin{
+    /* margin-bottom:-39px; */
+    background-image: linear-gradient( rgb(247, 3, 97), #ff9900); 
+    float:left;
+    width: 50px;
+    border-radius:20px;
+    margin-right: 30px;
+}
+
 #butonsDeRegistrar{
     width: 34%;
     justify-content: space-around;
     align-items: center;
-    outline: 1px solid royalblue;
+    /* outline: 1px solid royalblue; */
     margin: auto;
     margin-bottom:10px;
 }
 
 #butonRegistrar{
-    background-image: linear-gradient( rgb(247, 3, 97), #ff9900); ;
+    background-image: linear-gradient( rgb(247, 3, 97), #ff9900); 
 }
 
 #registroUsuario h3{
@@ -267,13 +294,52 @@ header h2{
     /* flex-direction: row; */
     align-items: center;
     justify-content: space-around;
-    outline: 1px solid violet;
-    width: auto;
+    /* outline: 1px solid violet; */
+    width: 100%;
     height: 100%;
 }
 
 header h2{
     font-family:Helvetica;
+}
+
+#butonIngresoGoogle{
+    margin:5px;
+}
+
+#butonIngresoFacebook{
+    margin:5px;
+}
+
+#butonIngresoCorreo{
+    margin:5px;
+}
+
+#postList{
+    overflow:scroll;
+    height: 600px;
+    margin-right: 30px;
+    margin-top:30px;
+    
+}
+
+#postForm{
+    width: 100%;
+}
+
+#contenedorpostList{
+    background: linear-gradient( to right, rgb(236, 118, 153),#fdd57f);
+    border: 5px solid transparent;
+    
+    border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
+    
+    -webkit-border-image: -webkit-linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
+    
+    border-image-slice: 1;
+}
+
+#contenidoWeb{
+    width: 50%;
 }
 
 @media only screen and (max-width: 600px){
