--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,66 @@
-header{
-    min-height: 45px;
-    width: 100%;
-    background: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
-    display: flex;
-    /* outline: 2px solid green; */
-}
-
-body{
-    background-color: rgb(27, 27, 27);
-    align-items: center;
-    justify-content: center;
-}
-
 *{
     padding: 0;
     margin: 0;
+}
+html{
+    width: 100%;
+    height: 100%;
+}
+
+header{
+    max-height: 60px;
+    width: 100%;
+    background: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
+    display: flex;
+    align-items: center;
+    /* outline: 2px solid green; */
+}
+header div{
+    width: 100%;
+}
+
+.tituloHeader{
+    margin: 10px;
+}
+
+section{
+    width: 100%;
+    height: 90%;
+    
+}
+
+#contenedorGeneral{
+    /*margin: auto;*/
+    width: 100%;
+    height: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /*padding-top: 3%;*/
+}
+
+.pantalla{
+    background: linear-gradient(to right, #ff99003f , rgba(247, 3, 97, 0.247));
+    width: 100%;
+    height: 100%;
+}
+
+.background{
+    width: 100%;
+    height: 100%;
+    background-image: url(/assets/img/wallpaperbetter41.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center ;
+    
+}
+
+
+body{
+    width: 100%;
+    height: 100%;
+
 }
 
 #inicioSesion{
@@ -29,13 +75,10 @@ body{
 main{
     /* background-color: rgb(27, 27, 27); */
     /* background-color: black; */
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
     /* outline: 1px solid yellow; */
-    height: auto;
-    width:auto;
+    height: 100%;
+    width: 100%;
 }
 
 #informacionAdicional{
@@ -128,7 +171,9 @@ main{
 #btn-CerrarSesion{
     float: right;
     outline:2px solid rgb(255, 174, 0);
-    margin:0;
+    margin:10px;
+    width: 160px;
+    
 }
 
 header h2{
@@ -141,24 +186,34 @@ header h2{
 }
 
 #personajes{
-    border: 1px solid violet;
-    border-radius:380px;
-    width: 100%;
-    height: 120%;
+    border: none;
+    border-radius:30%;
+    width: 90%;
     margin:auto;
-    margin-top:30px;
-    margin-bottom:20px;
+    padding: 25px;
+    
     /* padding-left:-300px; */
     /* box-shadow: 100px 1000px white;  */
 }
 
 #informacionPagina{
     /* outline: 1px solid yellowgreen; */
-    width: auto;
+    width: 900px;
+    height: 630px;
+    display: flex;
     align-items: center;
     justify-content: center;
-    margin:20px;
+    margin-left:30px;
+    margin-right: 40px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
     /* background-color: white; */
+   /* width: min-content;*/
+}
+
+.infoOtakuCode{
+    margin: auto;
+    width: 500px;
 }
 
 #contenedor1{
@@ -186,6 +241,9 @@ header h2{
 
 #login{
     margin-left:40px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    padding: 20px;
 }
 
 #butonRegistrate{
@@ -288,16 +346,16 @@ header h2{
     width: 100%;
     margin-bottom:40px;
 }
-
+/*
 #contenedorGeneral{
     display:flex;
     /* flex-direction: row; */
-    align-items: center;
+    /*align-items: center;
     justify-content: space-around;
     /* outline: 1px solid violet; */
-    width: 100%;
+    /*width: 100%;
     height: 100%;
-}
+}*/
 
 header h2{
     font-family:Helvetica;
