--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ header h2{
 }
 
 #informacionPagina{
-    /* outline: 1px solid yellowgreen; */
+    outline: 1px solid yellowgreen;
     width: auto;
     align-items: center;
     justify-content: center;
@@ -177,8 +177,8 @@ header h2{
 }
 
 #contenedorLogin{
-    /* outline: 1px solid turquoise; */
-    width:29%;
+    outline: 1px solid turquoise;
+    width:39%;
     height: 580px;
     margin:auto;
     justify-content: center;
@@ -209,7 +209,7 @@ header h2{
 
 #contenedorRegistar{
     width: 480px;
-    /* outline:1px solid maroon; */
+    outline:1px solid maroon;
     height: 600px;
     justify-content: center;
     align-items:center;
@@ -220,7 +220,7 @@ header h2{
 #registroUsuario{
     display:flex;
     flex-direction:column;
-    /* outline: 1px solid pink; */
+    outline: 1px solid pink;
     width: 100%;
     margin:0;
     height:  390px;
@@ -231,7 +231,7 @@ header h2{
 }
 
 #contenidoDeregistroUsuario{
-    /* outline:1px solid white; */
+    outline:1px solid white;
     align-items: center;
     justify-content: stretch;
     margin-right: 10px;
@@ -251,7 +251,7 @@ header h2{
 }
 
 #contenedorVolverRegistrar{
-    margin-bottom:-39px;
+    margin-bottom:-69px;
     background-image: linear-gradient( rgb(247, 3, 97), #ff9900); 
     float:left;
     width: 50px;
@@ -273,7 +273,7 @@ header h2{
     align-items: center;
     /* outline: 1px solid royalblue; */
     margin: auto;
-    margin-bottom:10px;
+    /* margin-bottom:10px; */
 }
 
 #butonRegistrar{
@@ -286,7 +286,7 @@ header h2{
 
 #registroUsuario input{
     width: 100%;
-    margin-bottom:10px;
+    margin-bottom:5px;
 }
 
 #contenedorGeneral{
@@ -294,7 +294,7 @@ header h2{
     /* flex-direction: row; */
     align-items: center;
     justify-content: space-around;
-    /* outline: 1px solid violet; */
+    outline: 1px solid violet;
     width: 100%;
     height: 100%;
 }
@@ -316,7 +316,7 @@ header h2{
 }
 
 #postList{
-    overflow:scroll;
+    overflow-y:scroll;
     height: 600px;
     margin-right: 30px;
     margin-top:30px;
@@ -328,7 +328,7 @@ header h2{
 }
 
 #contenedorpostList{
-    background: linear-gradient( to right, rgb(236, 118, 153),#fdd57f);
+    background: linear-gradient(  #fdd57f, rgb(236, 118, 153));
     border: 5px solid transparent;
     
     border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
@@ -340,6 +340,14 @@ header h2{
 
 #contenidoWeb{
     width: 50%;
+}
+
+#imagePost, #userPhoto{
+    max-width: 88%;
+    margin-top:1em;
+    display:block;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @media only screen and (max-width: 600px){
