--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,6 @@ header div{
     width: 100%;
 }
 
-.tituloHeader{
-    margin: 10px;
-}
-
 section{
     width: 100%;
     height: 90%;
@@ -41,8 +37,8 @@ section{
 }
 
 .pantalla{
-    /*background: linear-gradient(to right, #ff99003f , rgba(247, 3, 97, 0.247));
-    */
+    background-color:rgba(56, 66, 66, 0.5);
+    
     width: 100%;
     height: 100%;
 }
@@ -50,7 +46,7 @@ section{
 .background{
     width: 100%;
     height: 100%;
-    background-image: url(/assets/img/wallpaperbetter.com_1920x1080-14.jpg);
+    background-image: url(https://www.comunidadxbox.com/wp-content/uploads/2021/02/bda6ead6f931533e899ff1b150fb49ac-scaled.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center ;
@@ -180,6 +176,7 @@ main{
 header h2{
     width:89%;
     font-family: monospace;
+    margin: 10px;
 }
 
 #btnSendPost{
@@ -212,7 +209,7 @@ header h2{
    /* width: min-content;*/
 }
 
-.infoOtakuCode{
+#informacionPagina div h2{
     margin: auto;
     width: 500px;
 }
@@ -374,12 +371,62 @@ header h2{
     margin:5px;
 }
 
+#postForm h5{
+    color: #e7c400f1;
+}
+
+#postForm label{
+    color: #2ef8a0ea;
+}
+
+#postText{
+    border: 1px solid #343a40;
+}
+
 #postList{
     overflow:scroll;
-    height: 600px;
-    margin-right: 30px;
-    margin-top:30px;
+    display: inline-block;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
     
+    width: 50%;
+    background: rgba(59, 52, 52, 0.3);
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+#postList::-webkit-scrollbar{
+    display: none;
+}
+/*
+.card-body{
+    width: auto;
+    height: auto;
+}*/
+
+.mensajePublicado{
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0);
+    color: whitesmoke;
+    padding: 13px;
+    border-radius: 10px;
+    border: 1px solid #2ef8a0;
+    height: min-content;
+    padding-right: -20px;
+    padding-left: -5px;
+}
+
+.fechaPost{
+    color: #f3eaec42;
+    height: min-content;
+    margin: 0;
+    padding-top: -5px;
 }
 
 #postForm{
@@ -387,20 +434,28 @@ header h2{
 }
 
 #contenedorpostList{
-    background: linear-gradient( to right, rgb(236, 118, 153),#fdd57f);
-    border: 5px solid transparent;
-    
-    border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
+    /*background: linear-gradient( to right, rgb(236, 118, 153),#fdd57f);
+    *//*border: 5px solid transparent;*/
+    background: #343a40;
+    border-radius: px;
+    /*border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));   
     -webkit-border-image: -webkit-linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
-    border-image-slice: 1;
+    */
+    /*border-image-slice: 1;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*height: 100%;*/
+    width: 100%;
 }
 
 #contenidoWeb{
     width: 50%;
+    padding: 10px;
+    display: flex;
 }
 
+/*
 @media only screen and (max-width: 600px){
     header{
         width:100%;
@@ -411,3 +466,4 @@ header h2{
         flex-direction: column;
     }
 }
+*/
