--- a/assets/css/styleMedia.css
+++ b/assets/css/styleMedia.css
@@ -3,6 +3,132 @@
         width:100%;
     }
 
+    .pantalla{
+        background-color:rgba(56, 66, 66, 0.5);
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center ;
+        overflow: scroll;
+    }    
+
+    .background{
+        overflow: scroll;
+    }
+
+    #contenedorGeneral{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #contenedor1{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: inline-block;
+    }
+
+    #login{
+        background: rgba(0, 0, 0, 0.8);
+        border-radius: 10px;
+        padding: 20px;
+        margin: auto;
+        margin: 5%;
+        margin-bottom: 5%;
+    }
+
+    #informacionPagina{
+        width: 90%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: inline-block;
+        background: rgba(0, 0, 0, 0.8);
+        border-radius: 10px;
+        margin-right: 5%;
+        margin-left: 5%;
+        margin-bottom: 5%;
+        padding: 4%;
+    }
+
+    #personajes{
+        border: none;
+        border-radius:30%;
+        width: 100%;
+        margin:auto;
+        padding: 25px;
+    }
+
+    #informacionPagina div h2{
+        margin: auto;
+        width: min-content;
+    }
+    
+
+    #texto-pagina p{
+        margin:auto;
+    }
+
+    #paginaRegistro{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    #contenedorVolverRegistrar{
+        margin: auto;
+        background-image: linear-gradient( rgb(247, 3, 97), #ff9900); 
+        width: 50px;
+        height: min-content;
+        border-radius:20px;
+        margin-top: -165%;
+        margin-left: 5%;
+        display: flex;
+        order: 10;
+    }
+
+    #contenedorRegistar{
+        width: auto;
+        /* outline:1px solid maroon; */
+        height: 92%;
+        margin-right: 0%;
+        margin-bottom: -15%;
+        /*justify-content: center;
+        align-items:center;
+        padding:auto;*/
+    }
+
+    #registroUsuario{
+        display:flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: auto;
+    }
+    #contenidoDeregistroUsuario{
+        /* outline:1px solid white; */
+        display: flex;
+        display: inline-block;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: auto;
+        /*margin-left: 20%;
+        margin-right: auto;
+        margin-top: 12%;*/
+        width: max-content;
+        padding: 25px;
+        background: rgba(0, 0, 0, 0.8);
+        border-radius: 10px;
+        /* padding:10px; */
+        /* text-align: center; */
+        order: 9;
+        margin-top: 5%;
+    }
+
     #contenidoWeb{
         width: 80%;
     }
@@ -11,10 +137,7 @@
         width: 80%;
     }
     
-    #contenedor1{
-        display:flex;
-        flex-direction: column;
-    }
+
     #btnSendPost{
         margin: 0;
         width: auto;
