--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,105 @@
-header{
-    min-height: 45px;
-    width: 100%;
-    background: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
-    display: flex;
-    /* outline: 2px solid green; */
-}
-
-body{
-    background-color: rgb(27, 27, 27);
-    align-items: center;
-    justify-content: center;
-}
-
 *{
     padding: 0;
     margin: 0;
 }
+html{
+    width: 100%;
+    height: 100%;
+}
+
+header{
+    max-height: 60px;
+    width: 100%;
+    background: linear-gradient(to right, #ff9900d8 , rgba(247, 3, 97, 0.836));
+    display: flex;
+    /*align-items: center;*/
+    /* outline: 2px solid green; */
+}
+header div{
+    width: 100%;
+}
+
+section{
+    width: 100%;
+    height: 100%;
+    
+}
+
+#contenedorGeneral{
+    /*margin: auto;*/
+    width: 100%;
+    height: 100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /*padding-top: 3%;*/
+}
+
+.pantalla{
+    background-color:rgba(56, 66, 66, 0.5);
+    
+    /*width: 100%;*/
+    height: 100%;
+}
+
+.background{
+    width: 100%;
+    height: 94%;
+    background-image: url(https://www.comunidadxbox.com/wp-content/uploads/2021/02/bda6ead6f931533e899ff1b150fb49ac-scaled.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center ;
+    /*overflow: scroll;*/
+    
+}
+
+
+body{
+    width: 100%;
+    height: 100%;
+
+}
 
 #inicioSesion{
-    border-image: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
-    padding: 8px;
-    display: flex;
-    flex-direction: column;
-    color:white;
+    /*border-image: linear-gradient(to right, #ff9900 , rgb(247, 3, 97));
+    padding: 8px;*/
+    /*display: flex;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    padding: 20px;*/
+    height: 100%;
+    width: 100%;
+    margin: 0%;
+    /*margin-left: 10%;
+    margin-right: 3%*/
+}
+
+.contenedorIngresoCorreo{
+    background: rgb(0, 0, 0, 0.8);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    height: 120%;
+    margin-left: 10%;
+    margin-top: 10%;
+    margin-bottom: 30%;
+    width: 100%;
+    height: 100%;
+    color: white;
 }
 
 main{
     /* background-color: rgb(27, 27, 27); */
     /* background-color: black; */
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
     /* outline: 1px solid yellow; */
-    height: auto;
-    width:auto;
+    height: 100%;
+    width: 100%;
 }
 
 #informacionAdicional{
@@ -90,19 +154,15 @@ main{
 }
 
 #input_parameters {
-    
-    border: 5px solid transparent;
-    
-    border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
-    -webkit-border-image: -webkit-linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
-    border-image-slice: 1;
-    border-radius: 20px;
-    margin:10px;
-    margin-top:60px;
-    float:right;
-    width:60%;
+    /*background: rgb(0, 0, 0, 0.8);*/
+    /*border-radius: 10px;*/
+    /*display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;*/
+    /*padding: 20px;*/
+    height: 120%;
+    width: 100%;
     }
 
 #bloque4{
@@ -128,12 +188,15 @@ main{
 #btn-CerrarSesion{
     float: right;
     outline:2px solid rgb(255, 174, 0);
-    margin:0;
+    margin:10px;
+    width: 160px;
+    
 }
 
 header h2{
     width:89%;
     font-family: monospace;
+    margin: 10px;
 }
 
 #btnSendPost{
@@ -141,30 +204,39 @@ header h2{
 }
 
 #personajes{
-    border: 1px solid violet;
-    border-radius:380px;
-    width: 100%;
-    height: 120%;
+    border: none;
+    border-radius:30%;
+    width: 70%;
     margin:auto;
-    margin-top:30px;
-    margin-bottom:20px;
+    padding: 25px;
     /* padding-left:-300px; */
     /* box-shadow: 100px 1000px white;  */
 }
 
 #informacionPagina{
-    outline: 1px solid yellowgreen;
-    width: auto;
+    /* outline: 1px solid yellowgreen; */
+    width: 900px;
+    height: 630px;
+    display: flex;
     align-items: center;
     justify-content: center;
-    margin:20px;
+    margin-left:30px;
+    margin-right: 40px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
     /* background-color: white; */
+   /* width: min-content;*/
+}
+
+#informacionPagina div h2{
+    margin: auto;
+    width: 500px;
 }
 
 #contenedor1{
     display:flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:space-around;
     align-items: center;
     height: 100%;
     width: 100%;
@@ -177,19 +249,33 @@ header h2{
 }
 
 #contenedorLogin{
-    outline: 1px solid turquoise;
-    width:39%;
-    height: 580px;
+    /* outline: 1px solid turquoise; */
+    /**width:29%;
     margin:auto;
-    justify-content: center;
+    justify-content: center;*/
 }
 
 #login{
     margin-left:40px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    padding: 20px;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#logo-otakucode-Login{
+    display: flex;
+    justify-content: center;
+
 }
 
 #butonRegistrate{
     background:  linear-gradient( rgb(247, 3, 97), #ff9900);
+    border: none;
 }
 
 #proveedoresAdicionales{
@@ -202,28 +288,40 @@ header h2{
 }
 
 #butonVolverIngreso{
-    align-items: center;
-    float: right;
-    outline: 1px solid blue;
+    margin-left: 5px;
+    width: 10px;
+    height: min-content;
 }
 
 #contenedorRegistar{
-    width: 480px;
-    outline:1px solid maroon;
-    height: 600px;
-    justify-content: center;
+    width: auto;
+    /* outline:1px solid maroon; */
+    height: 100%;
+    margin-right: 10%;
+    /*justify-content: center;
     align-items:center;
-    padding:auto;
-    margin-left:0;
+    padding:auto;*/
+}
+
+#butonVolverRegistro{
+    display: flex;
+    float: left;
+    width: min-content;
+    height: min-content;
+    /*margin-left: 100%;*/
 }
 
 #registroUsuario{
     display:flex;
-    flex-direction:column;
-    outline: 1px solid pink;
-    width: 100%;
-    margin:0;
-    height:  390px;
+    flex-direction:row;
+    width: max-content;
+    height: 100%;
+    margin:3%;
+    display: inline-block;
+    /* outline: 1px solid pink; */
+    /*width: max-content;*/
+    /*margin:auto;*/
+    /*height: auto;*/
     /* justify-content:left; */
     /* align-items: center; */
     /* margin-right:90px; */
@@ -231,35 +329,41 @@ header h2{
 }
 
 #contenidoDeregistroUsuario{
-    outline:1px solid white;
+    /* outline:1px solid white; */
+    display: flex;
+    display: inline-block;
     align-items: center;
-    justify-content: stretch;
-    margin-right: 10px;
-    margin-left: 110px;
-    width: 70%;
-    padding:15px;
-
-    border: 5px solid transparent;
-    
-    border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
-    -webkit-border-image: -webkit-linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
-    border-image-slice: 1;
+    justify-content: center;
+    flex-direction: column;
+    margin: auto;
+    margin-left: 20%;
+    margin-top: 0%;
+    margin-right: 0%;
+    width: max-content;
+    padding: 25px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
     /* padding:10px; */
     /* text-align: center; */
 }
 
+#logo-otakucode{
+    margin: auto;
+}
+
 #contenedorVolverRegistrar{
-    margin-bottom:-69px;
+    margin: auto;
     background-image: linear-gradient( rgb(247, 3, 97), #ff9900); 
-    float:left;
     width: 50px;
+    height: min-content;
     border-radius:20px;
+    margin-top: 10%;
+    margin-left: 0%;
+    display: flex;
 }
 
 #contenedorVolverLogin{
-    /* margin-bottom:-39px; */
+    margin-bottom:-39px; 
     background-image: linear-gradient( rgb(247, 3, 97), #ff9900); 
     float:left;
     width: 50px;
@@ -268,16 +372,18 @@ header h2{
 }
 
 #butonsDeRegistrar{
-    width: 34%;
+    display: flex;
     justify-content: space-around;
     align-items: center;
     /* outline: 1px solid royalblue; */
     margin: auto;
-    /* margin-bottom:10px; */
+    height: min-content;
 }
 
 #butonRegistrar{
     background-image: linear-gradient( rgb(247, 3, 97), #ff9900); 
+    color: white;
+    border: none;
 }
 
 #registroUsuario h3{
@@ -286,18 +392,18 @@ header h2{
 
 #registroUsuario input{
     width: 100%;
-    margin-bottom:5px;
+    margin-bottom:20px;
 }
-
+/*
 #contenedorGeneral{
     display:flex;
     /* flex-direction: row; */
-    align-items: center;
+    /*align-items: center;
     justify-content: space-around;
-    outline: 1px solid violet;
-    width: 100%;
+    /* outline: 1px solid violet; */
+    /*width: 100%;
     height: 100%;
-}
+}*/
 
 header h2{
     font-family:Helvetica;
@@ -315,48 +421,167 @@ header h2{
     margin:5px;
 }
 
+#postForm h5{
+    color: #e7c400f1;
+}
+
+#postForm label{
+    color: #2ef8a0ea;
+}
+
+#userProfile{
+    width: 100%;
+}
+
+#userPhoto{
+    margin: auto;
+    margin-top: 10%;
+}
+
+#postText{
+    border: 1px solid #343a40;
+}
+
 #postList{
-    overflow-y:scroll;
-    height: 600px;
-    margin-right: 30px;
-    margin-top:30px;
+    overflow:scroll;
+    display: inline-block;
+    flex-direction: column;
     
+    height: 90%;
+    width: 50%;
+    background: rgba(59, 52, 52, 0.3);
+    padding-left: 5%;
+    padding-right: 5%;
+    border-radius: 10px;
+    margin: 3%;
+}
+
+#postList::-webkit-scrollbar{
+    display: none;
+}
+/*
+.card-body{
+    width: auto;
+    height: auto;
+}*/
+
+.mensajePublicado{
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0);
+    color: whitesmoke;
+    padding: 13px;
+    border-radius: 10px;
+    border: 1px solid #2ef8a0;
+    height: min-content;
+    margin-bottom: -10px;
+}
+
+.fechaPost{
+    color: #f3eaec42;
+    height: min-content;
+    margin: 0;
+    margin-top: -2%;
+    padding-bottom: 10px;
 }
 
 #postForm{
     width: 100%;
 }
 
-/* #contenedorpostList{
-    background: linear-gradient(  #fdd57f, rgb(236, 118, 153));
-    border: 5px solid transparent;
-    
-    border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
+#contenedorpostList{
+    /*background: linear-gradient( to right, rgb(236, 118, 153),#fdd57f);
+    *//*border: 5px solid transparent;*/
+    background: #343a40;
+    border-radius: 10px;
+    /*border-image: linear-gradient(to left, #ff9900 , rgb(247, 3, 97));   
     -webkit-border-image: -webkit-linear-gradient(to left, #ff9900 , rgb(247, 3, 97));
-    
-    border-image-slice: 1;
-} */
+    */
+    /*border-image-slice: 1;*/
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*height: 100%;*/
+    width: 100%;
+    margin-top: 30px;
+}
+
+.contenedorImagePost{
+    /*border: 1px solid rgba(111, 111, 117, 0.5);*/
+    /* padding: 0%; */
+    margin: 10px;
+    padding-bottom: -10px;
+    padding-top: 10px;
+    outline: 5px solid rgb(45, 90, 214);
+    /*border-radius: 5px;*/
+}
+
+#imagePost{
+    max-width: 500px;
+    max-height: 290px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40;
+    border-radius: 10px;
+    outline: 1px solid orange ;
+}
+
+#btn-Like:active{
+    background-color:blue;
+}
 
 #contenidoWeb{
-    width: 100%;
+    width: 40%;
+    padding: 0.5%;
+    padding-top: 2%;
+    margin: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
-#imagePost, #userPhoto{
-    max-width: 88%;
-    margin-top:1em;
-    display:block;
-    margin-right: auto;
-    margin-left: auto;
+#contenedorUser{
+    display:flex ;
+    flex-direction: row;
 }
 
+#userInfo{
+    /* outline: 1px solid green; */
+    height: auto;
+    text-align: center;
+    margin-right: 52px;
+    padding: 5px;
+    
+    /* float: right; */
+}
+
+#userPhoto{
+    /* outline: 1px solid blue; */
+    margin: auto;
+    
+    /* float: right; */
+}
+
+#contenedorUser{
+    /* outline: 1px solid violet; */
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+   
+}
+
+/*
 @media only screen and (max-width: 600px){
     header{
         width:100%;
     }
-
     #contenedor1{
         display:flex;
         flex-direction: column;
     }
 }
+*/
